--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "pawfect-match",
+  "name": "pawfectmatch",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://inesnicolau.github.io/pawfectmatch",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
